[gd_scene load_steps=21 format=3 uid="uid://cng1ndy2s187e"]

[ext_resource type="Texture2D" uid="uid://cvk5y38r78408" path="res://bg.png" id="1_3gfqf"]
[ext_resource type="Script" path="res://Netcode.gd" id="1_m44sp"]
[ext_resource type="Script" path="res://Control.gd" id="1_w0aj1"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_juumk"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_siogg"]
sky_material = SubResource("ProceduralSkyMaterial_juumk")

[sub_resource type="Environment" id="Environment_bjjvi"]
background_mode = 2
sky = SubResource("Sky_siogg")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="ViewportTexture" id="ViewportTexture_72rtc"]
viewport_path = NodePath("Control/SubViewport")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ts0lc"]
bg_color = Color(0.125911, 0.125911, 0.125911, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jpxgg"]
bg_color = Color(0.12549, 0.12549, 0.12549, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rdyd4"]
bg_color = Color(0.0745098, 0.0745098, 0.0745098, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_iluh0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q4vlf"]
bg_color = Color(0.0728426, 0.0728427, 0.0728425, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4ja4n"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aneeh"]
bg_color = Color(0.0728426, 0.0728427, 0.0728425, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2abcd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wig47"]
bg_color = Color(0.0728426, 0.0728427, 0.0728425, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lss0f"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mcsll"]
bg_color = Color(0.163797, 0.163799, 0.144131, 1)
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o3pmd"]
bg_color = Color(0.0728426, 0.0728427, 0.0728425, 1)
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_44bdp"]
bg_color = Color(0.0728426, 0.0728427, 0.0728425, 1)
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Root" type="Node"]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_bjjvi")

[node name="Netcode" type="Node" parent="."]
script = ExtResource("1_m44sp")

[node name="3D" type="Node3D" parent="."]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_w0aj1")

[node name="TextureRect" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("ViewportTexture_72rtc")

[node name="Panel" type="Panel" parent="Control"]
custom_minimum_size = Vector2(322, 87)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ts0lc")

[node name="MarginContainer" type="MarginContainer" parent="Control/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="Label2" type="Label" parent="Control/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Downloading needed files"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="Control/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "label"
horizontal_alignment = 3

[node name="ProgressBar" type="ProgressBar" parent="Control/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_jpxgg")
theme_override_styles/fill = SubResource("StyleBoxFlat_rdyd4")

[node name="Panel2" type="Panel" parent="Control"]
custom_minimum_size = Vector2(322, 218)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -161.0
offset_top = -109.0
offset_right = 161.0
offset_bottom = 109.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ts0lc")

[node name="MarginContainer" type="MarginContainer" parent="Control/Panel2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Panel2/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/Panel2/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 46
text = "S&kox client"
horizontal_alignment = 1
vertical_alignment = 1

[node name="IP" type="LineEdit" parent="Control/Panel2/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_iluh0")
theme_override_styles/normal = SubResource("StyleBoxFlat_q4vlf")
text = "localhost"
placeholder_text = "IP Address"
alignment = 1

[node name="Port" type="LineEdit" parent="Control/Panel2/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_4ja4n")
theme_override_styles/normal = SubResource("StyleBoxFlat_aneeh")
text = "7878"
placeholder_text = "Port"
alignment = 1

[node name="Username" type="LineEdit" parent="Control/Panel2/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_2abcd")
theme_override_styles/normal = SubResource("StyleBoxFlat_wig47")
placeholder_text = "Username"
alignment = 1

[node name="Connect" type="Button" parent="Control/Panel2/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_lss0f")
theme_override_styles/hover = SubResource("StyleBoxFlat_mcsll")
theme_override_styles/pressed = SubResource("StyleBoxFlat_o3pmd")
theme_override_styles/normal = SubResource("StyleBoxFlat_44bdp")
text = "Connect"

[node name="SubViewport" type="SubViewport" parent="Control"]
size = Vector2i(640, 480)

[node name="TextureRect" type="TextureRect" parent="Control/SubViewport"]
modulate = Color(0, 0, 0, 1)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)
pivot_offset = Vector2(320, 320)
texture = ExtResource("1_3gfqf")
expand_mode = 4
stretch_mode = 5

[connection signal="pressed" from="Control/Panel2/MarginContainer/VBoxContainer/Connect" to="Netcode" method="_on_connect_pressed"]
